Bug 1029504 - remove an incorrect assertion on XPCOM services being available, that failed when triggered late by the CC - r=smaug CLOSED TREE